# RV32IToREBEL

./: .gitignore  LICENSE  README.md
Benchmarks/Dhrystone/: README.md
Benchmarks/Dhrystone/ModifiedForBenchmarking/: dhry.c  dhry.h  dhry.s
Benchmarks/Dhrystone/ModifiedForBenchmarking/Dependencies/OpenBSD/: README.md  openbsd.h
Benchmarks/Dhrystone/ModifiedForBenchmarking/Dependencies/libgcc/: README.md  gcccode.h
Benchmarks/Dhrystone/ModifiedForBenchmarking/Dependencies/newlib/: COPYING.NEWLIB  newlib_deps.h
Benchmarks/Dhrystone/Original/: dhry.h
RiscvTests/PreprocessedAssembly/: add.s  addi.s  and.s  andi.s  auipc.s  beq.s  bge.s  bgeu.s  blt.s  bltu.s  bne.s  jal.s  jalr.s  lb.s  lbu.s  lh.s  lhu.s  lui.s  lw.s  or.s  ori.s  sb.s  sh.s  sll.s  slli.s  slt.s  slti.s  sltiu.s  sltu.s  sra.s  srai.s  srl.s  srli.s  sub.s  sw.s  xor.s  xori.s
RiscvTests/env/p/: riscv_test.h
RiscvTests/isa/macros/scalar/: test_macros.h
RiscvTests/isa/rv32ui/: add.S  addi.S  and.S  andi.S  auipc.S  beq.S  bge.S  bgeu.S  blt.S  bltu.S  bne.S  jal.S  jalr.S  lb.S  lbu.S  lh.S  lhu.S  lui.S  lw.S  or.S  ori.S  sb.S  sh.S  sll.S  slli.S  slt.S  slti.S  sltiu.S  sltu.S  sra.S  srai.S  srl.S  srli.S  sub.S  sw.S  xor.S  xori.S
code/: CMakeLists.txt  expressionparser.cpp  expressionparser.h  instructionconverterbase.h  lexer.h  logger.h  main.cpp  parseutils.cpp  ternarymapper.cpp  ternarymapper.h  ternaryoperandconverter.cpp  ternaryoperandconverter.h  token.h
code/Assemblers/: directivehelper.cpp  directivehelper.h
code/Assemblers/REBEL6/: assembler.cpp  assembler.h  assemblerandlinker.cpp  assemblerandlinker.h  assemblerutils.cpp  assemblerutils.h  executableprogram.cpp  executableprogram.h
code/Assemblers/RV32I/: assembler.cpp  assembler.h  assemblerandlinker.cpp  assemblerandlinker.h  assemblerutils.cpp  assemblerutils.h  executableprogram.cpp  executableprogram.h
code/Converters/: converter.cpp  converter.h  instructionconverterbase.cpp  instructionconverterbase.h  rv32ipseudotorv32ibase.cpp  rv32ipseudotorv32ibase.h  rv32itorebel2.cpp  rv32itorebel2.h  rv32itorebel6.cpp  rv32itorebel6.h
code/Expressions/: all_expressions.h  directive.cpp  directive.h  expression.h  instruction.cpp  instruction.h  label.cpp  label.h
code/Parsers/: expressionparser.cpp  expressionparser.h  lexer.cpp  lexer.h  parser.cpp  parser.h  parseutils.cpp  parseutils.h  ternarylogic.cpp  ternarylogic.h  token.h
code/Simulators/: directivehelper.cpp  directivehelper.h
code/Simulators/REBEL6/: assemblerandlinker.cpp  assemblerandlinker.h  executableprogram.cpp  executableprogram.h  simulator.cpp  simulator.h  simulatorutils.cpp  simulatorutils.h  ternarylogic.cpp  ternarylogic.h
code/Simulators/REBEL6/Cpu/: cpu.cpp  cpu.h  instructionexecutor.cpp  instructionexecutor.h  registry.cpp  registry.h
code/Simulators/RV32I/: assemblerandlinker.cpp  assemblerandlinker.h  assemblerutils.cpp  assemblerutils.h  executableprogram.cpp  executableprogram.h  simulator.cpp  simulator.h  simulatorutils.cpp  simulatorutils.h
code/Simulators/RV32I/Cpu/: cpu.cpp  cpu.h  instructionexecutor.cpp  instructionexecutor.h  registry.cpp  registry.h
code/Simulators/RV32I/Cpus/: cpu.cpp  cpu.h  registry.cpp  registry.h
code/Translators/: instructiontranslatorbase.cpp  instructiontranslatorbase.h  rv32itorebel2.cpp  rv32itorebel2.h  rv32itorebel6.cpp  rv32itorebel6.h  rv32itorv32ibase.cpp  rv32itorv32ibase.h  translator.cpp  translator.h
